--- a/sgyrsiau.html
+++ b/sgyrsiau.html
@@ -102,8 +102,9 @@ h1.phil {
 
 <p>The talks below are provided mostly as pdf files, with the occasional link to arXiv and YouTube. At the bottom of the page, there are links to a few other blog posts, posters and articles.</p>
 
-<a href="TowRssCovXtreme23.pdf"> RSS covXtreme (2023) </a></br>
-<a href="JntRssClm23.pdf"> RSS Climate (2023) </a></br>
+<a href="PljRssH2Sns23.pdf"> Feasibility of H<sub>2</sub> sensing (2023) </a></br>
+<a href="TowRssCovXtreme23.pdf"> covXtreme software (2023) </a></br>
+<a href="JntRssClm23.pdf"> Climate effects on severe ocean storm severity (2023) </a></br>
 <a href="UWA23EwnClm.pdf"> UWA Climate (2023) </a></br>
 <a href="Omae23-Tasman.pdf"> OMAE Tasman (2023) </a></br>
 <a href="JntMetOff22.pdf"> MetOffice / Plymouth (2022)</a></br>
@@ -148,7 +149,8 @@ h1.phil {
 <a href="JntRndOslo13.pdf">Oslo (2013)</a></br>
 <a href="WuJntRnd13.pdf">EVT13 (2013)</a></br>
 <a href="Robust12.pdf">N&#283m&#269i&#269ky Robust (2012)</a></br>
-<a href="JsmSld12.pdf">San Diego JSM (2012)</a></br>			<a href="JsmExtAbs12.pdf">JSM San Diego abstract (2012)</a></br>
+<a href="JsmSld12.pdf">San Diego JSM (2012)</a></br>			
+<a href="JsmExtAbs12.pdf">JSM San Diego abstract (2012)</a></br>
 <a href="Jonathan_2011_Oxford.pdf">Oxford SUTGEF (2011)</a></br>
 <a href="Eva2011.pdf">EVA Lyon (2011)</a></br>
 <a href="IrishMed2011.pdf">Irish Medievalists (2011)</a></br>
