newyddu tudalennau HTML yn unig

--- a/arall.html
+++ b/arall.html
@@ -100,18 +100,30 @@ h1.phil {
 <div class="content"> 
 
 <h1 class="title">airbourne sensing</h1>
-<p>Whether you’re interested in monitoring greenhouse gas emissions, locating airborne viruses, or just finding a mate by detecting individual pheromone molecules - as moths do - optical sensors, gas dispersion and statistical inversion are key fields. Provided you can measure trace concentrations well and understand how the atmosphere mixes as it moves, the answer to “who is emitting what, how much and where” - is literally Blowin in the wind. Read a technical <a href="AtmEnv12.pdf">article</a>, and article in <a href="BITW13.pdf">Significance</a> and a recent blog in <a href="https://medium.com/data-centric-engineering-blog/remote-sensing-for-methane-monitoring-and-reducing-greenhouse-gas-emissions-f37661685281">Medium</a>.</p>
-
+<p>Whether you’re interested in monitoring greenhouse gas emissions, locating airborne viruses, or just finding a mate by detecting individual pheromone molecules 
+- as moths do - optical sensors, gas dispersion and statistical inversion are key fields. Provided you can measure trace concentrations well and understand 
+how the atmosphere mixes as it moves, the answer to “who is emitting what, how much and where” - is literally Blowin in the wind. 
+Read a technical <a href="AtmEnv12.pdf">article</a>, and article in <a href="BITW13.pdf">Significance</a> and a recent 
+<a href="https://medium.com/data-centric-engineering-blog/remote-sensing-for-methane-monitoring-and-reducing-greenhouse-gas-emissions-f37661685281">blog</a> 
+in Medium about it.</p>
 <h1 class="title">ghost imaging</h1>
 <p>Can you retrieve a picture of an object through correlated measurements of a projected light using a single pixel camera and <a href="WlsEA13.pdf">ghost imaging</a>?</p>
 
 <h1 class="title">introductions to environmental extremes</h1>
-<p>With Jenny Wadsworth, I organised a <a href="https://sites.google.com/view/extremeoceanwavephenomena">workshop</a> at Lancaster on extreme ocean wave phenomena in 2019. Jenny organised a prior meeting on interfaces in extreme value theory.
-<p>Kevin Ewans and I contributed a <a href="https://www.worldscientific.com/worldscibooks/10.1142/11509">chapter</a> on extreme ocean conditions for the collection entitled "Ocean wave dynamics" edited by Ian Young and Alex Babanin of the University of Melbourne, which appeared in 2020.</p>
+<p>With Jenny Wadsworth, I organised a <a href="https://sites.google.com/view/extremeoceanwavephenomena">workshop</a> at Lancaster on extreme ocean 
+wave phenomena in 2019. Jenny organised a prior meeting on interfaces in extreme value theory. Kevin Ewans and I contributed a 
+<a href="https://www.worldscientific.com/worldscibooks/10.1142/11509">chapter</a> on extreme ocean conditions for the collection entitled 
+"Ocean wave dynamics" edited by Ian Young and Alex Babanin of the University of Melbourne, which appeared in 2020. 
+Matthew Jones and I recently wrote a 
+<a href="https://medium.com/data-centric-engineering-blog/characterising-extreme-environments-cc97b2403fcb">blog</a> 
+in Medium on environmental extremes.</p>
 <p>A dyma <a href="https://youtu.be/u-ikeirpbh4">sgwrs</a> YouTube ar eithafon amgylcheddol (a talk about environmental extremes in Welsh). </p>
 
 <h1 class="title">limit lines</h1>
 <p>Defining the "boundary" of a set of points in 2-D or higher dimensions is tricky. Many scientific disciplines face this problem. With Paul Carling (Southampton / Lancaster) and Teng Su (Chinese Academy of Sciences, Beijing), we wrote a <a href="LmtLns21.pdf">review article</a> seeking to outline a rational, structured approach to thinking about, defining and estimating these so-called "limit lines", with examples from environmental and geo-sciences.</p>
+
+<h1 class="title">model assurance</h1>
+<p>Data science is a huge field, and sometimes the empirical models on which it is based are not assessed well. This unpublished <a href="Jnt20Unp-MdlAss.pdf">paper</a> discusses some key issues in empirical model assessment.</p>
 
 <h1 class="title">molecular diffusion coefficients</h1>
 <p>The molecular diffusion coefficient quantifies the random thermal motion of molecules in a liquid or gas, depending on temperature, pressure, molecular and inter-molecular properties. They play an important role in many branches of chemical kinetics. With Peter Fisk (Shell), we developed new predictive models for diffusion coefficients of different solute / solvent combinations, from historical laboratory measurements, and wrote a <a href="https://eprints.lancs.ac.uk/id/eprint/133148">book chapter</a> about it.</p>
