--- a/bywyd.html
+++ b/bywyd.html
@@ -102,7 +102,10 @@ h1.phil {
 <p>I sing in a great choir called C&ocircr Rhuthun a'r Cylch. See more here at <a href="http://www.corrhuthun.co.uk/">www.corrhuthun.co.uk</a> .</p>
 
 <h1 class="title">meibion marchan</h1>
-Our men's singing group competed at the National Eisteddfod in 2011, 2013, 2015, 2018 and 2019. For some wonderment, see us in our element in <a href="http://www.bbc.co.uk/cymru/eisteddfod/2011/safle/canlyniadau/canlyniad2.shtml?rhif=25&type=day">2011</a> and better still in <a href="https://www.youtube.com/watch?v=d_3qRu872pk">2018</a>.</p>
+Our men's singing group competed at the National Eisteddfod in 2011, 2013, 2015, 2018, 2019 and 2023. For some wonderment, see us in our element 
+in <a href="http://www.bbc.co.uk/cymru/eisteddfod/2011/safle/canlyniadau/canlyniad2.shtml?rhif=25&type=day">2011</a> 
+and better still in <a href="https://www.youtube.com/watch?v=d_3qRu872pk">2018</a> and 2023, singing the hymn tune
+<a href="https://www.youtube.com/watch?v=YWEMYzgjnJI">Rhys</a> and a Welsh a-cappella version of <a href="https://www.youtube.com/watch?v=C8D-fkv4OsU">Crazy little thing called love</a>!</p>
 
 <h1 class="title">phil a'r monics</h1>
 <p>I once also sang in a quartet called Phil A'r Monics. Be amazed here: <a href="http://uk.youtube.com/watch?v=qL-z4H7cah4">Noson Lawen</a>, and if you can stand it here too: <a href="http://uk.youtube.com/watch?v=gvvpVLD3Gfk">Llanfair Dyffryn Clwyd</a> .</p>
