--- a/cymraeg.html
+++ b/cymraeg.html
@@ -145,7 +145,17 @@ h1.philllai {
 <p>Darllenwch am brofiadau modelydd ystagedol yn y <a href="Henllys.pdf">fan hyn</a>. Fe gewch chi flas ar peth o'r gwaith ymchwil yn y <a href="https://www.youtube.com/watch?v=u-ikeirpbh4&t=16s">fan hyn</a>. <a href="JntEithafon21.pdf">Dyma</a> erthygl am eithafon yn y Gymraeg.</p>
 
 <h1 class="phil">canu</h1>
-<p>Dwi'n canu yng <a href="http://www.corrhuthun.co.uk/">Ngh&ocircr Rhuthun</a> a chanais gynt gyda Phil A'r Monics, fel ar <a href="http://uk.youtube.com/watch?v=qL-z4H7cah4">Noson Lawen</a> neu yn <a href="http://uk.youtube.com/watch?v=gvvpVLD3Gfk">Llanfair Dyffryn Clwyd</a>. Ac mae Meibion Marchan yn ymddangos o bryd i'w gilydd hefyd! Ewch <a href="http://www.bbc.co.uk/cymru/eisteddfod/2011/safle/canlyniadau/canlyniad2.shtml?rhif=25&type=day">f'ama</a> am ryfeddod prin o Eisteddfod Genedlaethol 2011. Cafwyd hwyl yn Eisteddfodau Cenedlaethol 2013, 2015, 2018 a 2019 hefyd; <a href="https://www.youtube.com/watch?v=d_3qRu872pk">dyma</a> gip ar berfformiad 2018. </p>
+<p>Dwi'n canu yng <a href="http://www.corrhuthun.co.uk/">Ngh&ocircr Rhuthun</a> a chanais gynt gyda Phil A'r Monics, fel ar 
+<a href="http://uk.youtube.com/watch?v=qL-z4H7cah4">Noson Lawen</a> neu yn <a href="http://uk.youtube.com/watch?v=gvvpVLD3Gfk">Llanfair Dyffryn Clwyd</a>. 
+Ac mae Meibion Marchan yn ymddangos o bryd i'w gilydd hefyd! Ewch 
+<a href="http://www.bbc.co.uk/cymru/eisteddfod/2011/safle/canlyniadau/canlyniad2.shtml?rhif=25&type=day">f'ama</a> am ryfeddod prin o Eisteddfod 
+Genedlaethol 2011. Cafwyd hwyl yn Eisteddfodau Cenedlaethol 2013, 2015, 2018 a 2019 hefyd; <a href="https://www.youtube.com/watch?v=d_3qRu872pk">dyma</a> 
+gip ar berfformiad 2018. Yn 2023, cystadleuom ar drefniant o'r emyn d&ocircn
+<a href="https://www.youtube.com/watch?v=YWEMYzgjnJI">Rhys</a> a fersiwn barbershop Cymraeg o <a href="https://www.youtube.com/watch?v=C8D-fkv4OsU">Crazy little thing called love</a>!</p>
+
+
+
+</p>
 
 <h1 class="phil">englyna am wyddoniaeth</h1>
 <div class="row">  
