--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ h1.phil {
 
 <p>I work in extreme value analysis for oceanographic and ocean engineering applications, Bayesian methods for monitoring of large systems in time and inversion methods in remote sensing. I'm interested in uncertainty quantification and multivariate methods generally, particularly in application to our physical environment.</p>
 
-<p>At Lancaster, I'm working with Yanyun Wu and Jonathan Tawn (developments in extreme value analysis), with Dan Dodd and David Leslie (variational inference, e.g. for optimal design of subsea pipeline spans), with Matt Speers and Jonathan Tawn (multivariate extremes for ocean-structure interactions), and with Thomas Newman and Chris Nemeth (Bayesian inverse modelling for remote sensing). </p>
+<p>At Lancaster, I'm working with Yanyun Wu and Jonathan Tawn (developments in extreme value analysis), with Matt Speers and Jonathan Tawn (multivariate extremes for ocean-structure interactions), and with Thomas Newman and Chris Nemeth (Bayesian inverse modelling for remote sensing). </p>
 
 <p>Given the many forms of empirical inference used in data science, I'm also interested in establishing straightforward statistical procedures to provide a basic level of assurance and uncertainty quantification, for example in prediction.
 </p>
