--- a/cymraeg.html
+++ b/cymraeg.html
@@ -150,7 +150,7 @@ h1.philllai {
 Ac mae Meibion Marchan yn ymddangos o bryd i'w gilydd hefyd! Ewch 
 <a href="http://www.bbc.co.uk/cymru/eisteddfod/2011/safle/canlyniadau/canlyniad2.shtml?rhif=25&type=day">f'ama</a> am ryfeddod prin o Eisteddfod 
 Genedlaethol 2011. Cafwyd hwyl yn Eisteddfodau Cenedlaethol 2013, 2015, 2018 a 2019 hefyd; <a href="https://www.youtube.com/watch?v=d_3qRu872pk">dyma</a> 
-gip ar berfformiad 2018. Yn 2023, cystadleuom ar drefniant o'r emyn d&ocircn
+gip ar berfformiad 2018. Yn 2023, cystadlasom ar drefniant o'r emyn d&ocircn
 <a href="https://www.youtube.com/watch?v=YWEMYzgjnJI">Rhys</a> a fersiwn barbershop Cymraeg o <a href="https://www.youtube.com/watch?v=C8D-fkv4OsU">Crazy little thing called love</a>!</p>
 
 
