covXtreme wedi ei ddanfon i EnvSoft

--- a/arall.html
+++ b/arall.html
@@ -143,6 +143,8 @@ in Medium on environmental extremes.</p>
 <h1 class="title">pragmatic engineering extremes</h1>
 <p>With <a href="https://emps.exeter.ac.uk/renewable-energy/staff/em604">Ed Mackay</a> at the University of Exeter's Penryn Campus, we're seeking to provide straightforward engineering approaches incorporating recent developments in non-stationary and multivariate extremes.</p>
 <p>With Ryota Wada and Takuji Waseda at the University of Tokyo, we're working on useful extreme value methods for small samples of tropical cyclones offshore Japan. Here are articles on the <a href="WadEA_OcnEng16_LWM.pdf">LWM</a> (the likelihood weighted method) and <a href="WadEA18.pdf">STM-E</a> (the spatio-temporal maximum - exposure model).</p>
+<p>With Ross Towe and colleagues at Shell, we developed the 
+<a href="RssEA-covXtreme-23.pdf">covXtreme</a> software for practical multivariate extreme value analysis with covariates, available <a href="https://github.com/sede-open/covXtreme">here</a>.</p>
 
 <h1 class="title">sparse gaussian processes</h1>
 <p>With Jeremy Sellier and Matthew Jones, supervised by Petros Dellaportas at University College London, we're are looking at point process models and reinforcement learning.</p>
