--- a/erthyglau.html
+++ b/erthyglau.html
@@ -102,6 +102,7 @@ h1.phil {
 
 <p>The article pre-prints below are provided mostly as pdf files, with the occasional link to arXiv.</p>
 
+<a href="https://arxiv.org/abs/2310.12711">SPAR (2023)</a></br>
 <a href="TowEA-covXtreme-23.pdf">covXtreme software (2023)</a></br>
 <a href="RbrEA23DvrMth.pdf">Atmospheric divergence method (2023)</a></br>
 <a href="TndEA23ExtTimSrs.pdf">EVAR-MMEM (2023)</a></br>	
