--- a/erthyglau.html
+++ b/erthyglau.html
@@ -215,6 +215,7 @@ h1.phil {
 <a href="BrnJntCllBrd03.pdf">Collisional broadening (2003)</a></br>
 <a href="KskEA21JChemo.pdf">Catalyst performance (2001)</a></br>
 <a href="CrsVld2000.pdf">Cross-validation (2000)</a></br>
+<a href="ElsEA98.pdf">Extreme value basics for North Sea storms (1998)</a></br>
 <a href="JntTlr97.pdf">Irregular, non-linear waves in spread seas (1997)</a></br>
 <a href="TlrJntHrl97.pdf">Time-domain simulation of jack-up dynamics (1997)</a></br>
 <a href="Credit1996.pdf">Discriminant analysis (1996)</a></br>
