Ychwanegu Medium extremes

--- a/sgyrsiau.html
+++ b/sgyrsiau.html
@@ -170,6 +170,7 @@ h1.phil {
 
 <h1 class="phil">a few other items</h1>
 
+<a href="https://medium.com/data-centric-engineering-blog/characterising-extreme-environments-cc97b2403fcb">Medium blog on environmental extremes (2022)</a></br>
 <a href="https://medium.com/data-centric-engineering-blog/remote-sensing-for-methane-monitoring-and-reducing-greenhouse-gas-emissions-f37661685281">Medium blog on remote sensing (2022)</a></br>
 <a href="Grn22Poster.pdf">Poster on estimating directional wave spectra (2022)</a></br>
 <a href="Tnd22Poster.pdf">Poster on estimating multivariate time-series extremes (2022)</a></br>
