--- a/barddoni.html
+++ b/barddoni.html
@@ -182,6 +182,8 @@ Craig côf, 'sdim dianc rhag hon.</br>
 
 <p>Yma cewch amrhyw sgyrsiau ac erthyglau cyffredinol ysgrifennwyd gennyf (agorir rhain fel ffeiliau pdf).</p>
 
+<a href="2024-Gras.pdf">2024: Gras</a></br>
+<a href="2024-Nofio.pdf">2024: Nofio</a></br>
 <a href="GwasanaethFer-Gras-20231104.pdf">2023: Gras a threigl amser</a></br>
 <a href="2023_CwantwmAIYmwybyddiaethADuw.pdf">2023: Duw, mecaneg cwantwm, AI ac ymwybyddiaeth</a></br>
 <a href="2022_Cynhaeaf.pdf">2022: Cynhaeaf</a></br>
