--- a/erthyglau.html
+++ b/erthyglau.html
@@ -102,6 +102,7 @@ h1.phil {
 
 <p>The article pre-prints below are provided mostly as pdf files, with the occasional link to arXiv.</p>
 
+<a href="SndEA24-MSTM-TE.pdf">MSTM-(T)E (2024)</a></br>
 <a href="MckEA24-SparOmae.pdf">SPAR OMAE (2024)</a></br>
 <a href="BltEA24-SparInference.pdf">SPAR inference (2024)</a></br>
 <a href="TndEA23ExtTimSrs.pdf">EVAR-MMEM (2023)</a></br>
