--- a/sgyrsiau.html
+++ b/sgyrsiau.html
@@ -102,6 +102,7 @@ h1.phil {
 
 <p>The talks below are provided mostly as pdf files, with the occasional link to arXiv and YouTube. At the bottom of the page, there are links to a few other blog posts, posters and articles.</p>
 
+<a href="Jonathan_Bergen-2024.pdf"> Extremes summary, Bergen (2024) </a></br>
 <a href="PljRssH2Sns23.pdf"> Feasibility of H<sub>2</sub> sensing (2023) </a></br>
 <a href="TowRssCovXtreme23.pdf"> covXtreme software (2023) </a></br>
 <a href="JntRssClm23.pdf"> Climate effects on severe ocean storm severity (2023) </a></br>
@@ -170,6 +171,7 @@ h1.phil {
 
 <h1 class="phil">a few other items</h1>
 
+<a href="Newman_Inversion-2024.pdf">Poster on inversion for methane source characterisation (2024)</a></br>
 <a href="https://medium.com/data-centric-engineering-blog/characterising-extreme-environments-cc97b2403fcb">Medium blog on environmental extremes (2022)</a></br>
 <a href="https://medium.com/data-centric-engineering-blog/remote-sensing-for-methane-monitoring-and-reducing-greenhouse-gas-emissions-f37661685281">Medium blog on remote sensing (2022)</a></br>
 <a href="Grn22Poster.pdf">Poster on estimating directional wave spectra (2022)</a></br>
