--- a/sgyrsiau.html
+++ b/sgyrsiau.html
@@ -171,6 +171,7 @@ h1.phil {
 
 <h1 class="phil">a few other items</h1>
 
+<a href="Arweinyddiaeth.pdf">A light-hearted talk on leadership (2024)</a></br>
 <a href="Newman_Inversion-2024.pdf">Poster on inversion for methane source characterisation (2024)</a></br>
 <a href="https://medium.com/data-centric-engineering-blog/characterising-extreme-environments-cc97b2403fcb">Medium blog on environmental extremes (2022)</a></br>
 <a href="https://medium.com/data-centric-engineering-blog/remote-sensing-for-methane-monitoring-and-reducing-greenhouse-gas-emissions-f37661685281">Medium blog on remote sensing (2022)</a></br>
