--- a/erthyglau.html
+++ b/erthyglau.html
@@ -106,7 +106,7 @@ h1.phil {
 <a href="TowEA-covXtreme-24.pdf">covXtreme software (2024)</a></br>
 <a href="SndEA24-MSTM-TE.pdf">MSTM-(T)E (2024)</a></br>
 <a href="MckEA24-SparOmae.pdf">SPAR OMAE (2024)</a></br>
-<a href="BltEA24-SparInference.pdf">SPAR inference (2024)</a></br>
+<a href="BrlEA24-SparInference.pdf">SPAR inference (2024)</a></br>
 <a href="TndEA23ExtTimSrs.pdf">EVAR-MMEM (2023)</a></br>
 <a href="https://arxiv.org/abs/2310.12711">SPAR (2023)</a></br>
 <a href="RbrEA23DvrMth.pdf">Atmospheric divergence method (2023)</a></br>	
