DCE accepted, uncertainties yn barod i fynd

--- a/erthyglau.html
+++ b/erthyglau.html
@@ -102,9 +102,11 @@ h1.phil {
 
 <p>The article pre-prints below are provided mostly as pdf files, with the occasional link to arXiv.</p>
 
+<a href="PljEA23.pdf">Exploiting replicate production units (2024)</a></br>
+<a href="TndEA24-Uncertainties.pdf">Uncertainties in non-stationary extreme value analysis (2024)</a></br>
+<a href="SndEA24-MSTM-TE.pdf">MSTM-(T)E (2024)</a></br>
 <a href="24-EMEAESR.pdf">Probabilistic fluid loading & contours (2024)</a></br>
 <a href="TowEA-covXtreme-24.pdf">covXtreme software (2024)</a></br>
-<a href="SndEA24-MSTM-TE.pdf">MSTM-(T)E (2024)</a></br>
 <a href="MckEA24-SparOmae.pdf">SPAR OMAE (2024)</a></br>
 <a href="BrlEA24-SparInference.pdf">SPAR inference (2024)</a></br>
 <a href="TndEA23ExtTimSrs.pdf">EVAR-MMEM (2023)</a></br>
@@ -112,7 +114,6 @@ h1.phil {
 <a href="RbrEA23DvrMth.pdf">Atmospheric divergence method (2023)</a></br>	
 <a href="EwnJnt23ClmChn.pdf">Uncertainties in estimating climate effects (2023)</a></br>	
 <a href="EwnJnt23ClmChnTsm.pdf">Climate effects Tasman Sea (2023)</a></br>
-<a href="PljEA23.pdf">Exploiting replicate production units (2023)</a></br>
 <a href="TowEA22_AssValCndExt.pdf">Estimating associated values (2023)</a></br>	
 <a href="TndEA22CndMdl.pdf">Extremes conditional models (2022)</a></br>		
 <a href="SndEA22MSTME.pdf">Multivariate STM-E (2022)</a></br>				
