--- a/sgyrsiau.html
+++ b/sgyrsiau.html
@@ -171,6 +171,7 @@ h1.phil {
 
 <h1 class="phil">a few other items</h1>
 
+<a href="24-EVAN-SPAR.pdf">A light introduction to SPAR (by Callum Murphy-Barltrop, 2024)</a></br>
 <a href="Arweinyddiaeth.pdf">A light-hearted talk on leadership (2024)</a></br>
 <a href="Newman_Inversion-2024.pdf">Poster on inversion for methane source characterisation (2024)</a></br>
 <a href="https://medium.com/data-centric-engineering-blog/characterising-extreme-environments-cc97b2403fcb">Medium blog on environmental extremes (2022)</a></br>
