Update erthyglau.html, Conor et al. calibration

--- a/erthyglau.html
+++ b/erthyglau.html
@@ -102,6 +102,7 @@ h1.phil {
 
 <p>The article pre-prints below are provided mostly as pdf files, with the occasional link to arXiv.</p>
 
+<a href="MrpEA24-Clb.pdf">Forecast calibration (2024)</a></br>
 <a href="TndEA24-Uncertainties.pdf">Uncertainties in non-stationary extreme value analysis (2024)</a></br>
 <a href="24-EMEAESR.pdf">Probabilistic fluid loading & contours (2024)</a></br>
 <a href="BrlEA24-SparInference.pdf">SPAR inference (2024)</a></br>
