Added Patrik Foresee poster

--- a/sgyrsiau.html
+++ b/sgyrsiau.html
@@ -165,12 +165,12 @@ h1.phil {
 <a href="UKX08.pdf">UK Extremes meeting (2008)</a></br>
 <a href="RSS08.pdf">RSS conference (2008)</a></br>
 
-
 <h1 class="phil">github</h1>
 <p>You can find software for various aspects of extreme value analysis on my <a href="https://github.com/ygraigarw">GitHub</a> page.</p>
 
 <h1 class="phil">a few other items</h1>
 
+<a href="BhlEA24-Foresee-Poster.pdf"> Foresee update (2024) </a></br>
 <a href="24-EVAN-SPAR.pdf">A light introduction to SPAR (by Callum Murphy-Barltrop, 2024)</a></br>
 <a href="Arweinyddiaeth.pdf">A light-hearted talk on leadership (2024)</a></br>
 <a href="Newman_Inversion-2024.pdf">Poster on inversion for methane source characterisation (2024)</a></br>
