--- a/sgyrsiau.html
+++ b/sgyrsiau.html
@@ -170,6 +170,7 @@ h1.phil {
 
 <h1 class="phil">a few other items</h1>
 
+<a href="Jonathan_UiO2024.pdf"> Pictorial extremes (2024) </a></br>
 <a href="BhlEA24-Foresee-Poster.pdf"> Foresee update (2024) </a></br>
 <a href="24-EVAN-SPAR.pdf">A light introduction to SPAR (by Callum Murphy-Barltrop, 2024)</a></br>
 <a href="Arweinyddiaeth.pdf">A light-hearted talk on leadership (2024)</a></br>
