--- a/sgyrsiau.html
+++ b/sgyrsiau.html
@@ -102,6 +102,7 @@ h1.phil {
 
 <p>The talks below are provided mostly as pdf files, with the occasional link to arXiv and YouTube. At the bottom of the page, there are links to a few other blog posts, posters and articles.</p>
 
+<a href="Jonathan_DNVOslo-2024.pdf"> Extremes, DNV (2024) </a></br>
 <a href="Jonathan_Bergen-2024.pdf"> Extremes summary, Bergen (2024) </a></br>
 <a href="PljRssH2Sns23.pdf"> Feasibility of H<sub>2</sub> sensing (2023) </a></br>
 <a href="TowRssCovXtreme23.pdf"> covXtreme software (2023) </a></br>
