--- a/erthyglau.html
+++ b/erthyglau.html
@@ -102,6 +102,7 @@ h1.phil {
 
 <p>The article pre-prints below are provided mostly as pdf files, with the occasional link to arXiv.</p>
 
+<a href="MckEA25-SPARnD.pdf">SPAR nD (2025)</a></br>
 <a href="LecEA24ClmChn.pdf">Climate changes CMIP6 (2024)</a></br>
 <a href="MrpEA24-Clb.pdf">Forecast calibration (2024)</a></br>
 <a href="TndEA24-Uncertainties.pdf">Uncertainties in non-stationary extreme value analysis (2024)</a></br>
