--- a/barddoni.html
+++ b/barddoni.html
@@ -173,6 +173,7 @@ Craig côf, 'sdim dianc rhag hon.</br>
   <a href="GweCng23-2.pdf">2023-2</a>
   <a href="GweCng24-1.pdf">2024-1</a>
   <a href="GweCng24-2.pdf">2024-2</a>
+  <a href="GweCng25-1.pdf">2025-1</a>
 </div>
 
 </div>
