Diwedd flwyddyn eto

--- a/barddoni.html
+++ b/barddoni.html
@@ -182,8 +182,10 @@ Craig côf, 'sdim dianc rhag hon.</br>
 
 <h1 class="phil">sgyrsiau</h1>
 
-<p>Yma cewch amrhyw sgyrsiau ac erthyglau cyffredinol ysgrifennwyd gennyf (agorir rhain fel ffeiliau pdf).</p>
+<p>Yma cewch amrhyw sgyrsiau ac erthyglau cyffredinol (agorir rhain fel ffeiliau pdf).</p>
 
+<a href="2025-YSiwrnai.pdf">2025: Y Siwrnai</a></br>
+<a href="2024-YNadolig.pdf">2024: Y Nadolig</a></br>
 <a href="2024-RhyfelaYmMhalestina.pdf">2024: Rhyfela Ym Mhalestina</a></br>
 <a href="2024-Gras.pdf">2024: Gras</a></br>
 <a href="2024-Nofio.pdf">2024: Nofio</a></br>
