Dileu cysylltiad Shell

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@ h1.phil {
 
 <h1 class="phil">welcome a chroeso</h1>
 
-<p>I'm a statistical modeller at Shell and the Department of Mathematics and Statistics at Lancaster.</p>
+<p>I'm a statistical modeller at the School of Mathematical Sciences at Lancaster University.</p>
 
-<p>I work in extreme value analysis for oceanographic and ocean engineering applications, Bayesian methods for monitoring of large systems in time and inversion methods in remote sensing. I'm interested in uncertainty quantification and multivariate methods generally, particularly in application to our physical environment.</p>
+<p>I work in extreme value analysis for oceanographic and ocean engineering applications, Bayesian methods for monitoring of large systems in time and inversion methods in remote sensing. I'm interested in uncertainty quantification generally, particularly in application to modelling our physical environment.</p>
 
 <p>At Lancaster, I'm working with Matt Speers and Jonathan Tawn (multivariate extremes for ocean-structure interactions), and with Thomas Newman and Chris Nemeth (Bayesian inverse modelling for remote sensing). </p>
 
