--- a/erthyglau.html
+++ b/erthyglau.html
@@ -102,18 +102,18 @@ h1.phil {
 
 <p>The article pre-prints below are provided mostly as pdf files, with the occasional link to arXiv.</p>
 
+<a href="LchEA24ClmChn.pdf">Climate changes CMIP6 (2025)</a></br>
 <a href="MckEA25-SPARnD.pdf">SPAR nD (2025)</a></br>
-<a href="LchEA24ClmChn.pdf">Climate changes CMIP6 (2024)</a></br>
-<a href="MrpEA24-Clb.pdf">Forecast calibration (2024)</a></br>
+<a href="MrpEA24-Clb.pdf">Forecast calibration (2025)</a></br>
+<a href="PljEA23.pdf">Exploiting replicate LNG production units (2025)</a></br>
+<a href="NwmEA24-ProbInv.pdf">Probabilistic inversion (2024)</a></br>
 <a href="TndEA24-Uncertainties.pdf">Uncertainties in non-stationary extreme value analysis (2024)</a></br>
 <a href="24-EMEAESR.pdf">Probabilistic fluid loading & contours (2024)</a></br>
 <a href="BrlEA24-SparInference.pdf">SPAR inference (2024)</a></br>
-<a href="NwmEA24-ProbInv.pdf">Probabilistic inversion (2024)</a></br>
 <a href="MckEA24-SparOmae.pdf">SPAR OMAE (2024)</a></br>
-<a href="PljEA23.pdf">Exploiting replicate production units (2024)</a></br>
 <a href="SndEA24-MSTM-TE.pdf">MSTM-(T)E (2024)</a></br>
 <a href="TowEA-covXtreme-24.pdf">covXtreme software (2024)</a></br>
-<a href="TndEA23ExtTimSrs.pdf">EVAR-MMEM (2023)</a></br>
+<a href="TndEA23ExtTimSrs.pdf">EVAR-MMEM (2024)</a></br>
 <a href="https://arxiv.org/abs/2310.12711">SPAR (2023)</a></br>
 <a href="RbrEA23DvrMth.pdf">Atmospheric divergence method (2023)</a></br>	
 <a href="EwnJnt23ClmChn.pdf">Uncertainties in estimating climate effects (2023)</a></br>	
