--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ h1.phil {
 <p>Given the many forms of empirical inference used in data science, I'm also interested in establishing straightforward statistical procedures to provide a basic level of assurance and uncertainty quantification, for example in prediction.
 </p>
 
-<p>My CV is <a href="PhJCV.pdf">here</a>, my Google Scholar page <a href="http://scholar.google.com/citations?user=9d1va6wAAAAJ">here</a> and my GitHub <a href="https://github.com/ygraigarw">here</a>.</p>
+<p>My CV is <a href="PhJCV.pdf">here</a>, my Google Scholar page <a href="http://scholar.google.com/citations?user=9d1va6wAAAAJ">here</a> and my GitHub <a href="https://github.com/ygraigarw">here</a>. My university departmental webpage is <a href="https://www.lancaster.ac.uk/maths/people/philip-jonathan">here</a>.</p>
 
 </div>
 
