--- a/barddoni.html
+++ b/barddoni.html
@@ -184,6 +184,7 @@ Craig côf, 'sdim dianc rhag hon.</br>
 
 <p>Yma cewch amrhyw sgyrsiau ac erthyglau cyffredinol (agorir rhain fel ffeiliau pdf).</p>
 
+<a href="2025-SgwrsSiars.pdf">2025: Sgwrs Siars</a></br>
 <a href="2025-YSiwrnai.pdf">2025: Y Siwrnai</a></br>
 <a href="2024-YNadolig.pdf">2024: Y Nadolig</a></br>
 <a href="2024-RhyfelaYmMhalestina.pdf">2024: Rhyfela Ym Mhalestina</a></br>
